2010-04-02  Michael Nordman  <michaeln@google.com>

Reviewed by Nate Chapin.

        Set the close policy used by the DatabaseCloseTask in a constructor argument
        instead of hard coding it.
        https://bugs.webkit.org/show_bug.cgi?id=37037

        No new tests, new new functionality.

        * storage/Database.cpp: This callsite passes in DoNotRemoveFromDatabaseContext to retain its current behavior.
        (WebCore::Database::markAsDeletedAndClose):
        * storage/DatabaseTask.cpp:
        (WebCore::DatabaseCloseTask::DatabaseCloseTask):
        (WebCore::DatabaseCloseTask::doPerformTask):
        * storage/DatabaseTask.h:
        (WebCore::DatabaseCloseTask::create):
2010-04-02  Michael Nordman  <michaeln@google.com>

        Reviewed by Nate Chapin.

        Set the close policy used by the DatabaseCloseTask at this callsite to
        RemoveDatabaseFromContext. This restores its behavior to what it was prior to
        r56293.
        https://bugs.webkit.org/show_bug.cgi?id=37037

        * src/WebDatabase.cpp:
        (WebKit::WebDatabase::closeDatabaseImmediately):

Canonical link: https://commits.webkit.org/48327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57034 268f45cc-cd09-0410-ab3c-d52691b4dbfc