WebCore/storage/DatabaseTask.cpp
@@ -110,15 +110,15 @@ const char* DatabaseOpenTask::debugTaskName() const
 // *** DatabaseCloseTask ***
 // Closes the database.
 
-DatabaseCloseTask::DatabaseCloseTask(Database* database, DatabaseTaskSynchronizer* synchronizer)
+DatabaseCloseTask::DatabaseCloseTask(Database* database, Database::ClosePolicy closePolicy, DatabaseTaskSynchronizer* synchronizer)
     : DatabaseTask(database, synchronizer)
+    , m_closePolicy(closePolicy)
 {
 }
 
 void DatabaseCloseTask::doPerformTask()
 {
-    // Tell the database not to call back to the context thread; we'll handle it.
-    database()->close(Database::DoNotRemoveDatabaseFromContext);
+    database()->close(m_closePolicy);
 }
 
 #ifndef NDEBUG
